Added an 'engines' entry to package.json to only allow instalation if node v12.3+ is present in the environment.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
         "name": "Victor ADASCALITEI",
         "email": "adascalitei.victor@gmail.com"
     },
+    "engines": {
+        "node": ">=12.3"
+    },
     "repository": {
         "type": "git",
         "url": "https://3Nigma.github.io/nelu-kernelu.git"
