Issue #5 : Initial commit transpiling classes.

--- a/package.json
+++ b/package.json
@@ -25,13 +25,18 @@
         "url": "https://github.com/3Nigma/nelu-kernelu.git"
     },
     "dependencies": {
+        "@babel/core": "^7.6.0",
+        "@babel/traverse": "^7.6.0",
+        "@babel/types": "^7.6.1",
+        "@babel/generator": "^7.6.0",
+        "babel": "^6.23.0",
         "pkginfo": "^0.4.1",
         "uuid": "3",
         "winston": "^3.2.1",
         "yargs": "^13.3.0",
         "zeromq": "^5.1.0"
     },
-    "devDependencies": {
+    "devDependencies": {     
     },
     "scripts": {
         "postinstall": "node ./scripts/install"
